--- a/css/all-responsive-white.css@v=7.3
+++ b/css/all-responsive-white.css@v=7.3
@@ -46,7 +46,7 @@
   background: #a7a7a7;
   border-radius: 20px;
   transition: .5s;
-  box-shadow: inset 0 0 5px rgba(0,0,0,.2);
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, .2);
 }
 
 .round input:checked[type="checkbox"] {
@@ -1334,8 +1334,8 @@ i{
 }
 .search .search-button {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 0px;
+  left: 515px;
   height: 99%;
   width: 70px;
   background: #f90 url(../images/search.png) center no-repeat;
